--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,6 +3,83 @@
     Photos
     <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => "collapse", :id => "photos_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+      <%= f.label :created_at_gteq, "Created at greater than or equal to" %>
+      <div class='input-group date' id='created_atgteqPicker'>
+        <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+        <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+        <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                format: 'YYYY-MM-DD HH:MM:SS'
+              });
+          });
+        </script>
+      </div>
+    </div>
+
+<div class="form-group">
+      <%= f.label :created_at_lteq, "Created at less than or equal to" %>
+      <div class='input-group date' id='created_atlteqPicker'>
+        <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+        <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+        <script type="text/javascript">
+          $(function () {
+              $('#created_atlteqPicker').datetimepicker({
+                format: 'YYYY-MM-DD HH:MM:SS'
+              });
+          });
+        </script>
+      </div>
+    </div>
+
+<div class="form-group">
+    <%= f.label :caption_cont, "Caption contains" %>
+    <%= f.text_field :caption_cont, :class => "form-control", :placeholder => "Caption contains" %>
+  </div>
+
+        <div class="form-group">
+      <%= f.label :owner_email_cont, "User email contains" %>
+      <%= f.text_field :owner_email_cont, :class => "form-control", :placeholder => "User email contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :comments_body_cont, "Comment body contains" %>
+      <%= f.text_field :comments_body_cont, :class => "form-control", :placeholder => "Comment body contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :fans_email_cont, "User email contains" %>
+      <%= f.text_field :fans_email_cont, :class => "form-control", :placeholder => "User email contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :followers_email_cont, "User email contains" %>
+      <%= f.text_field :followers_email_cont, :class => "form-control", :placeholder => "User email contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :commenters_email_cont, "User email contains" %>
+      <%= f.text_field :commenters_email_cont, :class => "form-control", :placeholder => "User email contains" %>
+    </div>
+
+      <%= f.submit :class => "btn btn-primary btn-block" %>
+
+      <a href="/photos" class="btn btn-default btn-block">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#photos_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 
