--- a/app/views/votes/index.html.erb
+++ b/app/views/votes/index.html.erb
@@ -3,6 +3,63 @@
     Votes
     <a href="/votes/new" class="btn btn-lg btn-success">New Vote</a>
   </h1>
+</div><div class="row mb-1">
+  <div class="col-md-12">
+    <%= search_form_for @q, :class => "collapse", :id => "votes_filters" do |f| %>
+      <p class="lead">Narrow results:</p>
+
+        <div class="form-group">
+      <%= f.label :created_at_gteq, "Created at greater than or equal to" %>
+      <div class='input-group date' id='created_atgteqPicker'>
+        <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+        <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+        <script type="text/javascript">
+          $(function () {
+              $('#created_atgteqPicker').datetimepicker({
+                format: 'YYYY-MM-DD HH:MM:SS'
+              });
+          });
+        </script>
+      </div>
+    </div>
+
+<div class="form-group">
+      <%= f.label :created_at_lteq, "Created at less than or equal to" %>
+      <div class='input-group date' id='created_atlteqPicker'>
+        <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+        <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar"></span>
+        </span>
+        <script type="text/javascript">
+          $(function () {
+              $('#created_atlteqPicker').datetimepicker({
+                format: 'YYYY-MM-DD HH:MM:SS'
+              });
+          });
+        </script>
+      </div>
+    </div>
+
+        <div class="form-group">
+      <%= f.label :user_email_cont, "User email contains" %>
+      <%= f.text_field :user_email_cont, :class => "form-control", :placeholder => "User email contains" %>
+    </div>
+
+<div class="form-group">
+      <%= f.label :photo_caption_cont, "Photo caption contains" %>
+      <%= f.text_field :photo_caption_cont, :class => "form-control", :placeholder => "Photo caption contains" %>
+    </div>
+
+      <%= f.submit :class => "btn btn-primary btn-block" %>
+
+      <a href="/votes" class="btn btn-default btn-block">Clear filters</a>
+    <% end %>
+    <a class="btn btn-default btn-block mb-1" data-toggle="collapse" href="#votes_filters">
+      Show Filters
+    </a>
+  </div>
 </div>
 
 <div class="row">
